fix layout issues

--- a/carShowRoom/WebContent/resources/css/styles.css
+++ b/carShowRoom/WebContent/resources/css/styles.css
@@ -430,7 +430,6 @@ a img{
 .android-footer {
   background-color: #fafafa;
   position: relative;
-  width: 94.3%;
 }
 
   .android-footer a:hover {
